--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/node": "^16.0.1",
+    "@types/react": "^17.0.14",
+    "typescript": "^4.3.5"
   },
   "private": true
 }
